<resources>
    <string name="app_name">Blood Bank</string>
    <string name="register">Register</string>
    <string name="signup"><u>SignUp</u></string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="Username">Username</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone no.</string>
    <string name="already_have_account">Already have account?</string>
    <string name="blood_group">Blood Group</string>
</resources>